--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,9 @@ name: Deploy Quartz site to GitHub Pages
  
 on:
   push:
-    branches:
-      - v4
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
  
 permissions:
   contents: read
