--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,16 +1,14 @@
 name: Build and Test
 
 on:
-  pull_request:
-    branches:
-      - v4
   push:
-    branches:
-      - v4
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build-and-test:
-    if: ${{ github.repository == 'jackyzha0/quartz' }}
+    if: ${{ github.repository == 'ulisesfronze/ulisesfronze.github.io' }}
     strategy:
       matrix:
         os: [windows-latest, macos-latest, ubuntu-latest]
